# fake-plutus-core

./: CHANGELOG.md  README.md  cabal.project  fake-plutus-core.cabal
bench/uint64/: Main.hs
src/: Bitwise.hs  Core.hs  Derived.hs  Ed25519.hs  NQueens.hs  SHA512.hs
src/Baseline/: Ed25519.hs  SHA512.hs  UInt64.hs
src/Optimized/: NQueens.hs  UInt64.hs
